# ssh2-python3

./: .gitignore  .travis.yml  Changelog.rst  MANIFEST.in  README.md  README.rst  _setup_libssh2.py  invoke.yaml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tasks.py
.github/: issue_template.md
building/: build-wheels.sh
ci/: build-ssh2.sh  copy_abi_dist.py  install-ssh2.sh
doc/: conf.py
examples/: example_banner.py
libssh2/include/: libssh2.h
libssh2/src/: channel.c  libssh2_priv.h
ssh2/: _version.py  agent.pxd  agent.pyx  c_pkey.pxd  c_sftp.pxd  c_ssh2.pxd  channel.pxd  channel.pyx  error_codes.pxd  error_codes.pyx  exceptions.pyx  fileinfo.pxd  fileinfo.pyx  knownhost.pxd  knownhost.pyx  listener.pxd  listener.pyx  pkey.pxd  pkey.pyx  publickey.pxd  publickey.pyx  session.pxd  session.pyx  sftp.pxd  sftp.pyx  sftp_handle.pxd  sftp_handle.pyx  statinfo.pxd  statinfo.pyx  utils.pyx
tests/: base_test.py  key_ecdsa  key_ecdsa.pub  signed_key_ecdsa  signed_key_ecdsa.pub  test_auth.py  test_knownhost.py  test_session.py  test_sftp.py
tests/embedded_server/: authorized_keys  ca  ca.pub  openssh.py  sshd_config
